fix running on mac